bottom banner, footer style fixings on mobile

--- a/assets/styles/components/footer.css
+++ b/assets/styles/components/footer.css
@@ -2,14 +2,19 @@
   display: flex;
   flex-flow: row wrap;
 }
+.footer {
+  padding-bottom: 1rem;
+}
 
-.content .list-wrapper {
-  flex-basis: 100%;
+.content .list-wrapper:not(:last-child) {
+  flex-basis: 80%;
   font-weight: normal;
+  margin-bottom: 20px;
 }
 
 .content .list-wrapper ul {
   list-style: none;
+  margin: 0 !important;
 }
 .content .list-wrapper ul h3 {
   margin-bottom: 30px;
@@ -30,8 +35,11 @@
   color: #444;
   letter-spacing: 1px;
 }
+
 .social-media strong {
+  display: inline-block;
   color: #444;
+  margin-top: 10px;
 }
 .social-icon {
   font-size: 16px;
@@ -40,6 +48,8 @@
 
 .copyright-wrapper {
   border-top: 1px solid #d1d1d1;
+  text-align: center;
+  padding-top: 1.2rem;
 }
 
 @media screen and (min-width: 480px) {
@@ -64,15 +74,18 @@
 }
 
 @media screen and (min-width: 720px) {
+  .content .list-wrapper:not(:last-child)  {
+    flex-basis: 22%;
+  }
   .content .list-wrapper:last-child ul {
     display: flex;
     flex-flow: row wrap;
   }
   .content .list-wrapper:first-child {
-    flex-basis: 39%;
+    flex-basis: 33%;
   }
-  .content .list-wrapper {
-    flex-basis: 20%;
+  .content .list-wrapper:last-child {
+    flex-basis: 22%;
   }
 }
 
